--- a/home.css
+++ b/home.css
@@ -110,7 +110,7 @@ nav ul li a:hover {
 .hero {
     text-align: center;
     padding: 80px;
-    background: linear-gradient(135deg, #d5f955, #f8d64d);
+    background: linear-gradient(135deg, #79fb6d, #1e7c01);
     color: white;
     animation: fadeIn 1.5s ease-in-out;
 }
@@ -128,16 +128,18 @@ nav ul li a:hover {
 
 .hero h1 {
     font-size: 42px;
+    color: #333333;
 }
 
 .hero p {
     font-size: 18px;
     margin-top: 10px;
+    color: #faf8f8;
 }
 
 .shop-btn {
     display: inline-block;
-    background: #ff6b6b;
+    background: #25f002;
     color: white;
     padding: 10px 20px;
     margin-top: 15px;
@@ -147,7 +149,7 @@ nav ul li a:hover {
 }
 
 .shop-btn:hover {
-    background: #ff4f4f;
+    background: #3ce608;
     transform: scale(1.1);
 }
 .slider {
@@ -224,7 +226,7 @@ nav ul li a:hover {
     margin: 10px 0;
 }
 
-cart-item:hover {
+.product-container-product {
     transform: scale(1.02);
 }
 
@@ -376,3 +378,50 @@ button:hover {
         grid-template-columns: repeat(1, 1fr);
     }
 }
+
+/* 
+.hero {
+    text-align: center;
+    padding: 80px;
+    background: linear-gradient(135deg, #c3f901, #f9c700);
+    color: white;
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.hero h1 {
+    font-size: 42px;
+    color: #ff4f4f;
+}
+
+.hero p {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #ff4f4f;
+}
+
+.shop-btn {
+    display: inline-block;
+    background: #25f002;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.shop-btn:hover {
+    background: #3ce608;
+    transform: scale(1.1);
+} */
