--- a/css/buy-detail.css
+++ b/css/buy-detail.css
@@ -12,11 +12,12 @@ body {
 .container {
     width: 40%;
     background: white;
-    padding: 30px;
+    padding: 40px;
     border-radius: 12px;
     box-shadow: 0px 5px 15px black;
     transition: transform 0.3s ease;
     margin-bottom: 20px;
+    margin-top: 5%;
 }
 .container:hover {
     transform: scale(1.02);
@@ -59,12 +60,4 @@ button:hover {
     font-weight: bold;
     display: none;
     margin-top: 15px;
-}
-.product-section {
-    width: 40%;
-    background: white;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0px 5px 15px black;
-    margin-bottom: 20px;
 }
